--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -80,4 +80,4 @@ jobs:
           echo "${{ needs.calc-version.outputs.version }}"
       - name: pack
         run: dotnet pack --no-build --no-restore --version-suffix ${{ needs.calc-version.outputs.version }}
-        working-directory: Galab/Galab.Tests
+        working-directory: Galab/Galab
