--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -79,5 +79,5 @@ jobs:
         run: |
           echo "${{ needs.calc-version.outputs.version }}"
       - name: pack
-        run: dotnet pack --no-build --no-restore --version-suffix ${{ needs.calc-version.outputs.version }}
+        run: dotnet pack Galab.csproj --no-build --no-restore --version-suffix ${{ needs.calc-version.outputs.version }}
         working-directory: Galab/Galab
