--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -8,22 +8,15 @@ on:
       - 'master'
         
 jobs:
-  Explore-GitHub-Actions:
+  integ:
     runs-on: ubuntu-latest
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
-  build:
-    runs-on: ubuntu-latest
+    name: integration-tests
+    services:
+      eventstore:
+        image: eventstore/eventstore:21.10.9-bionic
+        ports:
+        - "1113:1113"
+        - "2113:2113"
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
