--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -8,9 +8,8 @@ on:
       - 'master'
         
 jobs:
-  integ:
+  build:
     runs-on: ubuntu-latest
-    name: build
     services:
       eventstore:
         image: eventstore/eventstore:21.10.9-bionic
