--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -13,6 +13,16 @@ jobs:
     services:
       eventstore:
         image: eventstore/eventstore:21.10.9-bionic
+        env:
+          EVENTSTORE_CLUSTER_SIZE: 1
+          EVENTSTORE_RUN_PROJECTIONS: All
+          EVENTSTORE_START_STANDARD_PROJECTIONS: True
+          EVENTSTORE_DB: /var/lib/eventstore-data
+          EVENTSTORE_LOG: /var/log/eventstore
+          EVENTSTORE_EXT_TCP_PORT: 1113
+          EVENTSTORE_INSECURE: true
+          EVENTSTORE_ENABLE_EXTERNAL_TCP: true
+          EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP: true
         ports:
         - "1113:1113"
         - "2113:2113"
