--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -26,6 +26,9 @@ jobs:
         ports:
         - "1113:1113"
         - "2113:2113"
+        volumes:
+        - /var/lib/eventstore-data:/var/lib/eventstore-data
+        - /var/lib/eventstore-data:/var/log/eventstore
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
