--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -42,7 +42,7 @@ jobs:
         id: cache
         with:
           path: galab
-          key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+          key: ${{ runner.os }}-galab-build
 
   test-cosmosdb:
     runs-on: ubuntu-latest
@@ -52,6 +52,7 @@ jobs:
   
   test-eventstore:
     runs-on: ubuntu-latest
+    needs: build
     services:
       eventstore:
         image: eventstore/eventstore:21.10.9-bionic
@@ -73,7 +74,7 @@ jobs:
         id: cache
         with:
           path: galab
-          key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+          key: ${{ runner.os }}-galab-build
       - name: Test
         run: dotnet test -c Release --no-restore --verbosity normal --no-build
         working-directory: Galab/Galab.Tests
