--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build
         run: dotnet build Galab -c Release --no-restore
       - name: Test
-        run: dotnet test -c Release --no-restore --verbosity normal --no-build
+        run: dotnet test -c Release --no-restore --verbosity normal --no-build --filter Category=EventStore
         working-directory: Galab/Galab.Tests
 
   test-cosmosdb:
@@ -55,8 +55,18 @@ jobs:
         - "10254:10254"
         - "10255:10255"
     steps:
-      - name: dotnet info
-        run: dotnet --info
+      - uses: actions/checkout@v3
+      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '7.0.x'
+      - name: Restore packages
+        run: dotnet restore Galab
+      - name: Build
+        run: dotnet build Galab -c Release --no-restore
+      - name: Test
+        run: dotnet test -c Release --no-restore --verbosity normal --no-build --filter Category=CosmosDb
+        working-directory: Galab/Galab.Tests
   
   test-eventstore:
     runs-on: ubuntu-latest
