--- a/Galab/Galab.Tests/Galab.Tests.csproj
+++ b/Galab/Galab.Tests/Galab.Tests.csproj
@@ -24,6 +24,7 @@
 		<PackageReference Include="EventStore.Client.Grpc.PersistentSubscriptions" Version="22.0.0" />
 		<PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="22.0.0" />
 		<PackageReference Include="EventStore.Client.Grpc.Streams" Version="22.0.0" />
+		<PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.0" />
 	</ItemGroup>
 
 </Project>
