--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -40,6 +40,7 @@ jobs:
 
   test-cosmosdb:
     runs-on: ubuntu-latest
+    container: ubuntu
     services:
       cosmosdb:
         image: mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator:latest
