--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -40,14 +40,13 @@ jobs:
 
   test-cosmosdb:
     runs-on: ubuntu-latest
-    container: ubuntu
     services:
       cosmosdb:
         image: mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator:latest
         env:
           AZURE_COSMOS_EMULATOR_PARTITION_COUNT: 8
           AZURE_COSMOS_EMULATOR_ENABLE_DATA_PERSISTENCE: false
-          AZURE_COSMOS_EMULATOR_IP_ADDRESS_OVERRIDE: 127.0.0.1
+          AZURE_COSMOS_EMULATOR_IP_ADDRESS_OVERRIDE: localhost
         ports:
         - "8081:8081"
         - "10251:10251"
