--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -44,9 +44,9 @@ jobs:
       cosmosdb:
         image: mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator:latest
         env:
-          AZURE_COSMOS_EMULATOR_PARTITION_COUNT: 8
+          AZURE_COSMOS_EMULATOR_PARTITION_COUNT: 4
           AZURE_COSMOS_EMULATOR_ENABLE_DATA_PERSISTENCE: false
-          AZURE_COSMOS_EMULATOR_IP_ADDRESS_OVERRIDE: localhost
+          AZURE_COSMOS_EMULATOR_IP_ADDRESS_OVERRIDE: 127.0.0.1
         ports:
         - "8081:8081"
         - "10251:10251"
@@ -64,6 +64,8 @@ jobs:
         run: dotnet restore Galab
       - name: Build
         run: dotnet build Galab -c Release --no-restore
+      - name: Sleep for 30 seconds
+        run: sleep 30s
       - name: Test
         run: dotnet test -c Release --no-restore --verbosity normal --no-build --filter Category=CosmosDb
         working-directory: Galab/Galab.Tests
