--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -25,18 +25,18 @@ jobs:
         - "1113:1113"
         - "2113:2113"
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Restore packages
-        run: dotnet restore Galab
-      - name: Build
-        run: dotnet build Galab -c Release --no-restore
-      - name: Test
-        run: dotnet test -c Release --no-restore --verbosity normal --no-build --filter Category=EventStore
-        working-directory: Galab/Galab.Tests
+    - uses: actions/checkout@v3
+    - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '7.0.x'
+    - name: Restore packages
+      run: dotnet restore Galab
+    - name: Build
+      run: dotnet build Galab -c Release --no-restore
+    - name: Test
+      run: dotnet test -c Release --no-restore --verbosity normal --no-build --filter Category=EventStore
+      working-directory: Galab/Galab.Tests
 
   test-cosmosdb:
     runs-on: ubuntu-latest
@@ -55,20 +55,24 @@ jobs:
         - "10254:10254"
         - "10255:10255"
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Restore packages
-        run: dotnet restore Galab
-      - name: Build
-        run: dotnet build Galab -c Release --no-restore
-      - name: Sleep for 30 seconds
-        run: sleep 30s
-      - name: Test
-        run: dotnet test -c Release --no-restore --verbosity normal --no-build --filter Category=CosmosDb
-        working-directory: Galab/Galab.Tests
+    - uses: actions/checkout@v3
+    - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '7.0.x'
+    - name: Restore packages
+      run: dotnet restore Galab
+    - name: Build
+      run: dotnet build Galab -c Release --no-restore
+    - name: Test
+      run: dotnet test -c Release --no-restore --verbosity normal --no-build --filter Category=CosmosDb
+      working-directory: Galab/Galab.Tests
+
+  test-docker-compose:
+    runs-on: ubuntu-latest
+    steps:
+    - name: compose
+      run: docker compose -f Galab/Galab.Tests/docker-compose.yml up
   
   test-eventstore:
     runs-on: ubuntu-latest
