--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -71,6 +71,11 @@ jobs:
   test-docker-compose:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '7.0.x'
     - name: compose
       run: docker compose -f Galab/Galab.Tests/docker-compose.yml up
   
