--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -44,7 +44,7 @@ jobs:
       cosmosdb:
         image: mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator:latest
         env:
-          AZURE_COSMOS_EMULATOR_PARTITION_COUNT: 5
+          #AZURE_COSMOS_EMULATOR_PARTITION_COUNT: 5
           AZURE_COSMOS_EMULATOR_ENABLE_DATA_PERSISTENCE: false
           #AZURE_COSMOS_EMULATOR_IP_ADDRESS_OVERRIDE: 127.0.0.1
         ports:
@@ -54,12 +54,6 @@ jobs:
         - "10253:10253"
         - "10254:10254"
         - "10255:10255"
-        options: >-
-          --memory 3g
-          --cpus 2.0
-          --tty
-          --platform linux
-          --restart unless-stopped
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
