--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -54,6 +54,12 @@ jobs:
         - "10253:10253"
         - "10254:10254"
         - "10255:10255"
+        options: >-
+          --memory 3g
+          --cpus 2.0
+          --tty
+          --platform linux
+          --restart unless-stopped
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
