--- a/.github/workflows/galab1.yml
+++ b/.github/workflows/galab1.yml
@@ -45,7 +45,7 @@ jobs:
         env:
           AZURE_COSMOS_EMULATOR_PARTITION_COUNT: 5
           AZURE_COSMOS_EMULATOR_ENABLE_DATA_PERSISTENCE: false
-          #AZURE_COSMOS_EMULATOR_IP_ADDRESS_OVERRIDE: 127.0.0.1
+          AZURE_COSMOS_EMULATOR_IP_ADDRESS_OVERRIDE: 127.0.0.1
         ports:
         - "8081:8081"
         - "10251:10251"
